// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function tests implement #196 : set function name as identifier 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": "a",
          "nullable": false,
          "type": null,
          "value": null,
          "variadic": false,
        },
      ],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "f",
        "trailingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* f */",
          },
        ],
      },
      "nullable": false,
      "type": null,
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "value": "/* f */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Function tests test function parsing 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": "a",
          "nullable": false,
          "type": null,
          "value": Number {
            "kind": "number",
            "value": "1",
          },
          "variadic": false,
        },
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": "b",
          "nullable": false,
          "type": ClassReference {
            "kind": "classreference",
            "name": "\\\\callable",
            "resolution": "fqn",
          },
          "value": null,
          "variadic": false,
        },
        Parameter {
          "byref": true,
          "kind": "parameter",
          "name": "params",
          "nullable": true,
          "type": ClassReference {
            "kind": "classreference",
            "name": "\\\\array",
            "resolution": "fqn",
          },
          "value": null,
          "variadic": true,
        },
      ],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": true,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
      "nullable": true,
      "type": ClassReference {
        "kind": "classreference",
        "name": "boolean",
        "resolution": "uqn",
      },
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Closure {
          "arguments": Array [
            Parameter {
              "byref": false,
              "kind": "parameter",
              "name": "b",
              "nullable": false,
              "type": null,
              "value": null,
              "variadic": false,
            },
          ],
          "body": Block {
            "children": Array [
              Return {
                "expr": Boolean {
                  "kind": "boolean",
                  "raw": "true",
                  "value": true,
                },
                "kind": "return",
              },
            ],
            "kind": "block",
          },
          "byref": true,
          "isStatic": false,
          "kind": "closure",
          "nullable": false,
          "type": ClassReference {
            "kind": "classreference",
            "name": "\\\\array",
            "resolution": "fqn",
          },
          "uses": Array [
            Variable {
              "byref": true,
              "curly": false,
              "kind": "variable",
              "name": "c",
            },
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "d",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
        "operator": "=",
        "right": Call {
          "arguments": Array [
            variadic {
              "kind": "variadic",
              "what": Array {
                "items": Array [
                  Number {
                    "kind": "number",
                    "value": "1",
                  },
                  Identifier {
                    "kind": "identifier",
                    "name": ClassReference {
                      "kind": "classreference",
                      "name": "null",
                      "resolution": "uqn",
                    },
                  },
                  Number {
                    "kind": "number",
                    "value": "1",
                  },
                  Number {
                    "kind": "number",
                    "value": "2",
                  },
                  Number {
                    "kind": "number",
                    "value": "3",
                  },
                ],
                "kind": "array",
                "shortForm": true,
              },
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "foo",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Function tests test reserved word for function name error 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": false,
      },
      "nullable": false,
      "type": null,
    },
  ],
  "errors": Array [
    Error {
      "expected": 105,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'list' (T_LIST), expecting T_STRING on line 1",
      "token": "'list' (T_LIST)",
    },
  ],
  "kind": "program",
}
`;

exports[`Function tests test static closure 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Closure {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isStatic": true,
          "kind": "closure",
          "nullable": false,
          "type": null,
          "uses": Array [],
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Function tests test variadic error 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
        "operator": "=",
        "right": Call {
          "arguments": Array [
            variadic {
              "kind": "variadic",
              "what": Array {
                "items": Array [
                  Number {
                    "kind": "number",
                    "value": "1",
                  },
                  Number {
                    "kind": "number",
                    "value": "2",
                  },
                  Number {
                    "kind": "number",
                    "value": "3",
                  },
                ],
                "kind": "array",
                "shortForm": true,
              },
            },
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "foo",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Unexpected argument after a variadic argument on line 1",
      "token": undefined,
    },
  ],
  "kind": "program",
}
`;
